tdf#130334: Firebird deal with array fields

See https://bugs.documentfoundation.org/show_bug.cgi?id=130334#c11
See https://firebirdsql.org/file/documentation/reference_manuals/fblangref25-en/html/fblangref25-datatypes-bnrytypes.html#fblangref25-datatypes-array
Change-Id: I27c53b9c771fcdb3b89e66af325a8234c7de08bb

Change-Id: I7b9d27f78e351eda611d13f5a07ef3c80ff00e3a